[FIX] sap.f.DynamicPage: Increase spacing between header buttons and tabs
Raised the position of the pin and collapse buttons from -0.95rem to -0.80rem. The previous positioning caused the tab focus outline to be partially hidden when buttons overlapped with tabs in narrow layouts.

SNOW: DINC0521096

--- a/src/themelib_sap_horizon/src/sap/f/themes/sap_horizon_dark/DynamicPage.less
+++ b/src/themelib_sap_horizon/src/sap/f/themes/sap_horizon_dark/DynamicPage.less
@@ -86,7 +86,7 @@
 .sapFDynamicPageHeaderPinButton {
 	width: 1.5rem;
 	height: 2rem;
-	bottom: -0.95rem; /* needs refactoring in the base file */
+	bottom: -0.80rem; /* needs refactoring in the base file */
 
 	/* Reflection: styles overwritten */
 	.sapMBtnInner {
@@ -138,7 +138,7 @@ html[data-sap-ui-browser^='cr'] .sapFDynamicPageHeaderPinButton {
 
 	.sapFDynamicPageToggleHeaderIndicator,
 	.sapFDynamicPageHeaderPinButton {
-		bottom: -0.95rem; /* needs refactoring in the base file */
+		bottom: -0.80rem; /* needs refactoring in the base file */
 
 		.sapMBtnInner {
 			bottom: 0.25rem;
